# LifeLog

./: .code-review-result.json  .gitignore  README.md  skills-lock.json
C7-3-4L/: 使用教程.txt  注意事项.txt
C7-3-4L/ESP32-CAM固件烧录问题/: 优先烧录带camera的这个固件.txt
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/jni/: CMakeLists.txt  yolov8_ncnn_jni.cpp
android/app/src/main/jni/ncnn/armeabi-v7a/include/ncnn/: platform.h
android/app/src/main/jni/ncnn/x86_64/include/ncnn/: platform.h
android/ncnn_backup/: NcnnYOLODetector.kt
android/ncnn_backup/jni/: CMakeLists.txt  yolov8_ncnn_jni.cpp
android/ncnn_backup/jni/ncnn/arm64-v8a/include/ncnn/: layer_shader_type_enum.h  platform.h
android/ncnn_backup/jni/ncnn/arm64-v8a/lib/cmake/ncnn/: ncnnConfig.cmake
android/ncnn_backup/jni/ncnn/riscv64/include/ncnn/: platform.h
enclosure/: Lifelog_Case.scad  Lifelog_Case_v2.scad  Lifelog_Case_v2.stl
firmware/lifelog/: ble_service.cpp  ble_service.h  camera.cpp  camera.h  camera_pins.h  config.h  configuration.cpp  configuration.h  lifelog.ino  sd_storage.cpp  sd_storage.h  timebase.cpp  timebase.h
prototype/: character_desc.txt  companion_compose_test.py  companion_e2e.py  e2e_pipeline.py  export_yolo_ncnn.py  test_seedream_fusion.py
prototype/e2e_output/: kimi_response_20260630_160411.json  kimi_response_20260630_160603.json  kimi_response_20260630_160802.json  kimi_response_20260630_160916.json  pipeline_result_20260630_160411.json  pipeline_result_20260630_160603.json  (+2 more)
(+88 files in other folders)
